chore: addressing code review feedback
